tests/semantic_errors/gajdosik5_3.tl
require "ifj21"
--pouzitie bez definicie
global name : function (integer) : string, string, string
function name    (a : integer, a : integer) : string, string, string end

function main()
    num = 90
    while 1 do
        while 1 do
            while 1 do
                while 1 do
                    local num : id = 89
                end
            end
        end
        num = 80
    end
end

main()